# Advanced-RAG---LangGraph

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml.example  langgraph.json  main.py  pyproject.toml  requirements.txt
.chroma/4b4d41e3-0bdc-4856-9463-546ccd42d9ed/: index_metadata.pickle
backend/document_processor/: __init__.py  ingestion.py  interfaces.py  retriever.py  service.py
backend/graph/: graph.py  state.py  utils.py
backend/graph/chains/: answer_grader.py  entry_classifier.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
backend/graph/chains/tests/: test_chains.py
backend/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
backend/graph/prompts/: __init__.py
backend/graph/prompts/templates/: answer_grader_template.py  entry_classifier_template.py  generation_template.py  hallucination_grader_template.py  retrieval_grader_template.py
frontend/components/: document_uploader.py  model_selector.py  rag_chat.py
frontend/ui/interfaces/: base.py
frontend/ui/streamlit_impl/: streamlit_renderer.py
tests/: test_document_ingestion.py
